--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+igsc (0.9.3-0ubuntu1~24.10~ppa2) oracular; urgency=medium
+
+  * Add proper depends for libigsc-dev 
+
+ -- piandro-mobl2 <pavel.androniychuk@intel.com>  Mon, 16 Sep 2024 13:39:00 -0700
+
 igsc (0.9.3-0ubuntu1~24.10~ppa1) oracular; urgency=medium
 
   * Bump version to 0.9.3
