--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 igsc (0.9.3-0ubuntu1~24.10~ppa3) oracular; urgency=medium
 
+  * Change igsc package name to intel-gsc to meet package name requirements 
+
+ -- Shane McKee <shane.mckee@canonical.com>  Wed, 18 Sep 2024 18:01:31 +0800
+
+igsc (0.9.3-0ubuntu1~24.10~ppa2) oracular; urgency=medium
+
   * Add proper depends for libigsc-dev 
 
  -- piandro-mobl2 <pavel.androniychuk@intel.com>  Mon, 16 Sep 2024 13:39:00 -0700
