--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+igsc (0.9.3-0ubuntu1~24.10~ppa5) oracular; urgency=medium
+
+  * Change maintainer to Ubuntu Devs
+
+ -- Shane McKee <shane.mckee@canonical.com>  Fri, 04 Oct 2024 19:41:52 +0800
+
 igsc (0.9.3-0ubuntu1~24.10~ppa4) oracular; urgency=medium
 
   * Rebuild due to newer version of metee
